--- a/docs/modules/trino/pages/getting_started/installation.adoc
+++ b/docs/modules/trino/pages/getting_started/installation.adoc
@@ -1,6 +1,6 @@
 = Installation
 
-On this page you will install the Stackable Operator for Trino as well as the commons and secret operator which are
+On this page you will install the Stackable Operator for Trino as well as the commons, secret and listener operator which are
 required by all Stackable Operators.
 
 == Stackable Operators
