--- a/docs/modules/trino/pages/reference/commandline-parameters.adoc
+++ b/docs/modules/trino/pages/reference/commandline-parameters.adoc
@@ -1,5 +1,8 @@
+= Command line parameters
 
-=== product-config
+This operator accepts the following command line parameters:
+
+== product-config
 
 *Default value*: `/etc/stackable/trino-operator/config-spec/properties.yaml`
 
@@ -12,7 +15,7 @@
 cargo run -- run --product-config /foo/bar/properties.yaml
 ----
 
-=== watch-namespace
+== watch-namespace
 
 *Default value*: All namespaces
 
