--- a/docs/modules/trino/partials/nav.adoc
+++ b/docs/modules/trino/partials/nav.adoc
@@ -1,7 +1,6 @@
 * xref:trino:getting_started/index.adoc[]
 ** xref:trino:getting_started/installation.adoc[]
 ** xref:trino:getting_started/first_steps.adoc[]
-* xref:trino:configuration.adoc[]
 * xref:trino:concepts.adoc[]
 * xref:trino:usage-guide/index.adoc[]
 ** xref:trino:usage-guide/connect_to_trino.adoc[]
@@ -25,3 +24,9 @@
 *** xref:trino:usage-guide/operations/pod-placement.adoc[]
 *** xref:trino:usage-guide/operations/pod-disruptions.adoc[]
 *** xref:trino:usage-guide/operations/graceful-shutdown.adoc[]
+* xref:trino:reference/index.adoc[]
+** xref:trino:reference/crds.adoc[]
+*** {crd-docs}/trino.stackable.tech/trinocluster/v1alpha1/[TrinoCluster {external-link-icon}^]
+*** {crd-docs}/trino.stackable.tech/trinocatalog/v1alpha1/[TrinoCatalog {external-link-icon}^]
+** xref:trino:reference/commandline-parameters.adoc[]
+** xref:trino:reference/environment-variables.adoc[]
