--- a/docs/modules/trino/pages/reference/environment-variables.adoc
+++ b/docs/modules/trino/pages/reference/environment-variables.adoc
@@ -1,5 +1,8 @@
+= Environment variables
 
-=== PRODUCT_CONFIG
+This operator accepts the following environment variables:
+
+== PRODUCT_CONFIG
 
 *Default value*: `/etc/stackable/trino-operator/config-spec/properties.yaml`
 
@@ -25,7 +28,7 @@ docker run \
     docker.stackable.tech/stackable/trino-operator:latest
 ----
 
-=== WATCH_NAMESPACE
+== WATCH_NAMESPACE
 
 *Default value*: All namespaces
 
@@ -53,4 +56,3 @@ docker run \
 --mount type=bind,source="$HOME/.kube/config",target="/home/stackable/.kube/config" \
 docker.stackable.tech/stackable/trino-operator:latest
 ----
-
