--- a/docs/modules/trino/partials/nav.adoc
+++ b/docs/modules/trino/partials/nav.adoc
@@ -11,6 +11,7 @@
 ** xref:trino:usage-guide/monitoring.adoc[]
 ** xref:trino:usage-guide/log_aggregation.adoc[]
 ** xref:trino:usage-guide/query.adoc[]
+** xref:trino:usage-guide/overrides.adoc[]
 ** xref:trino:usage-guide/catalogs/index.adoc[]
 *** xref:trino:usage-guide/catalogs/black-hole.adoc[]
 *** xref:trino:usage-guide/catalogs/generic.adoc[]
