--- a/docs/modules/trino/pages/index.adoc
+++ b/docs/modules/trino/pages/index.adoc
@@ -4,7 +4,7 @@
 
 :k8s-crs: https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/
 
-This is an operator for Kubernetes that can manage https://https://trino.io/[Trino] clusters. Trino is an open-source
+This is an operator for Kubernetes that can manage https://trino.io/[Trino] clusters. Trino is an open-source
 distributed SQL query engine that enables high-speed analytics of large datasets from multiple data sources using SQL
 queries. This operator enables you to manage your Trino instances on Kubernetes efficiently.
 
