--- a/docs/modules/trino/pages/usage-guide/catalogs/iceberg.adoc
+++ b/docs/modules/trino/pages/usage-guide/catalogs/iceberg.adoc
@@ -1,6 +1,6 @@
 = Apache Iceberg
 
-Apache Iceberg is a format for huge analytic tables designed to address some of the scaling issues with traditional Hive tables. Iceberg depends on a Hive metastore being present and makes use of the same metastore configMap used by the Hive connector.
+Apache Iceberg is a format for huge analytic tables designed to address some of the scaling issues with traditional Hive tables. Iceberg depends on a Hive metastore being present and makes use of the same metastore ConfigMap used by the Hive connector.
 
 == Example Iceberg catalog configuration
 
