--- a/docs/modules/trino/pages/index.adoc
+++ b/docs/modules/trino/pages/index.adoc
@@ -1,54 +1,50 @@
 = Stackable Operator for Trino
-:description: The Stackable Operator for Trino is a Kubernetes operator that can manage Trino clusters. Learn about its features, resources, dependencies and demos, and see the list of supported Trino versions.
-:keywords: Stackable Operator, Trino, Kubernetes, k8s, operator, data science, data exploration
-
+:description: The Stackable operator for Trino is a Kubernetes operator that can manage Trino clusters. Learn about its features, resources, dependencies and demos, and see the list of supported Trino versions.
+:keywords: Stackable operator, Trino, Kubernetes, k8s, operator, data science, data exploration
+:trino: https://trino.io/
 :k8s-crs: https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/
 
-This is an operator for Kubernetes that can manage https://trino.io/[Trino] clusters. Trino is an open-source
-distributed SQL query engine that enables high-speed analytics of large datasets from multiple data sources using SQL
-queries. This operator enables you to manage your Trino instances on Kubernetes efficiently.
+This is an operator for Kubernetes that can manage h{trino}[Trino] clusters.
+Trino is an open-source distributed SQL query engine that enables high-speed analytics of large datasets from multiple data sources using SQL queries.
+This operator enables you to manage your Trino instances on Kubernetes efficiently.
 
 == Getting started
 
-Follow the xref:getting_started/index.adoc[Getting started guide] to start using the Stackable Operator for Trino on
-your Kubernetes cluster. It will guide you through the installation process and help you run your first Trino queries on
-Kubernetes.
+Follow the xref:getting_started/index.adoc[Getting started guide] to start using the Stackable operator for Trino on your Kubernetes cluster.
+It will guide you through the installation process and help you run your first Trino queries on Kubernetes.
 
 == Operator model
 
-The Operator manages Kubernetes resources in sync with {k8s-crs}[custom resources] defined by you, the user.
+The operator manages Kubernetes resources in sync with {k8s-crs}[custom resources] defined by you, the user.
 
 === Custom resources
 
-The Trino Operator manages two custom resources: The _TrinoCluster_ and xref:concepts.adoc#catalogs[_TrinoCatalogs_].
-The TrinoCluster resource allows for the specification of a Trino cluster. Two
-xref:concepts:roles-and-role-groups.adoc[roles] are defined: `coordinators` and `workers`.
+The Trino operator manages two custom resources: The _TrinoCluster_ and xref:concepts.adoc#catalogs[_TrinoCatalogs_].
+The TrinoCluster resource allows for the specification of a Trino cluster.
+Two xref:concepts:roles-and-role-groups.adoc[roles] are defined: `coordinators` and `workers`.
 
-To connect to data sources the TrinoCatalogs are used. Have a look at the xref:usage-guide/catalogs/index.adoc[catalog
-overview] to find out which types of data sources are supported by the Stackable platform.
+To connect to data sources the TrinoCatalogs are used.
+Have a look at the xref:usage-guide/catalogs/index.adoc[catalog overview] to find out which types of data sources are supported by the Stackable platform.
 
 === Resources
 
-To run the cluster on Kubernetes the Operator creates Kubernetes resources such as ConfigMaps, StatefulSets and Services.
+To run the cluster on Kubernetes the operator creates Kubernetes resources such as ConfigMaps, StatefulSets and Services.
 
 image::trino_overview.drawio.svg[A diagram depicting the Kubernetes resources created by the operator]
 
 == Demos
 
-The xref:demos:trino-taxi-data.adoc[] demo uses Trino together with xref:hive:index.adoc[Apache Hive] to access the
-prominent New York Taxi dataset. xref:superset:index.adoc[Apache Superset] is then used to read the data from the Trino
-instance via SQL and visualize it.
+The xref:demos:trino-taxi-data.adoc[] demo uses Trino together with xref:hive:index.adoc[Apache Hive] to access the prominent New York Taxi dataset. xref:superset:index.adoc[Apache Superset] is then used to read the data from the Trino instance via SQL and visualize it.
 
-The xref:demos:data-lakehouse-iceberg-trino-spark.adoc[] demo showcases a data Lakehouse with multiple datasets. Again
-Trino is used to enable SQL access to the data. The xref:demos:trino-iceberg.adoc[] demo is a subset of the Lakehouse
-demo, focusing just on Apache Iceberg integration.
+The xref:demos:data-lakehouse-iceberg-trino-spark.adoc[] demo showcases a data Lakehouse with multiple datasets.
+Again Trino is used to enable SQL access to the data.
+The xref:demos:trino-iceberg.adoc[] demo is a subset of the Lakehouse demo, focusing just on Apache Iceberg integration.
 
-The xref:demos:spark-k8s-anomaly-detection-taxi-data.adoc[] also uses Trino to enable SQL access to data but also shows
-xref:opa:index.adoc[OpenPolicyAgent] integration for xref:usage-guide/security.adoc#authorization[authorization].
+The xref:demos:spark-k8s-anomaly-detection-taxi-data.adoc[] also uses Trino to enable SQL access to data but also shows xref:opa:index.adoc[OpenPolicyAgent] integration for xref:usage-guide/security.adoc#authorization[authorization].
 
 == Supported versions
 
-The Stackable Operator for Trino currently supports the Trino versions listed below.
+The Stackable operator for Trino currently supports the Trino versions listed below.
 To use a specific Trino version in your TrinoCluster, you have to specify an image - this is explained in the xref:concepts:product-image-selection.adoc[] documentation.
 The operator also supports running images from a custom registry or running entirely customized images; both of these cases are explained under xref:concepts:product-image-selection.adoc[] as well.
 
